src/sass/layout/layout.scss
/*--------------------------------------------------------------
# Reset
--------------------------------------------------------------*/
@import "../../../bower_components/sanitize-css/sanitize";

/*--------------------------------------------------------------
# Glyph icons
--------------------------------------------------------------*/
@import "../../../bower_components/font-awesome/scss/font-awesome";

/*--------------------------------------------------------------
# Grid
--------------------------------------------------------------*/
@import "../../../bower_components/jeet/scss/jeet/index";

/*--------------------------------------------------------------
# Layout
--------------------------------------------------------------*/
@import "config";
@import "main";
@import "mixins";

/*--------------------------------------------------------------
# Typography
--------------------------------------------------------------*/
@import "../typography/fontface";
@import "../typography/webfonts";
@import "../typography/knife/index";

/*--------------------------------------------------------------
# Layout start >>>
--------------------------------------------------------------*/

body
{
    color: $textcolor;
}

.header-container
{
    background: $maincolor;
}

.container
{
    @include center($max_width: $container-desktop, $pad: $defaultpadding);
}

.slide
{
    overflow: auto;

    padding: 4% 1%;
    @media(max-width: $container-mobile) {
        padding: 10% 1%;
    }

    text-align: center;

    background: #fff;

    .main-section
    {

        h1 
        {
            @media(min-width: $container-ipad) {
                @include type-scale('large', 1, 0);
            }

        }

        p {
            @include center($max_width: 600px, $pad: $defaultpadding);
        }

        .avatar
        {
            width: 100%;
            max-width: 200px;
            height: auto;
            max-height: 200px;

            border-radius: 50%;
        }
    }
}

.items {
    overflow: auto;
    padding: 0;
    overflow: hidden;
    margin: 0;

    .item-wrapper {
        @include krem('padding', 30px);
    }

    .item {
        background: #ABB7B7;
        @include span(1/4);
    
        @media(max-width: $container-ipad) {
            @include stack();
        }

        margin:0;
        padding: 0;
        overflow: hidden;
        position: relative; 
    
        .fa {
            margin-right: 6px;
            position: relative;
            bottom: -3px;
        }

        .notes {
            p {
                @include type-scale('normal');
                margin-bottom: 0;

                .fa {
                    bottom: -6px;
                }
            }
        }

        .overlay-link {
            opacity: 0;
            position: absolute;
            width: 100%;
            height: 100%;
            margin: 0;
            padding: 0;
            left: 0;
            top: 0;
            z-index: 100;
            transition: 0.55s;
            background: #1E8BC3;

            p {
                @include centered();
                width: 100%;
                @include type-scale('xxlarge');
                font-family: $headingfont;
                font-weight: bold;
                text-align: center;
            }

            &:hover {
                opacity: 1;
            }

        }

        h4 {
            margin-top: 0;
            color: #ffffff;
        }

        ul, li {
            list-style: none;
            color: #ffffff;

            .fa {
                margin-right: 8px;
            }

            a {
                color: rgba(#ffffff,1);
                font-weight: bold;

                &:hover {
                    color: rgba(#ffffff,0.5);
                }
            }
        }
        
        p
        {
            color: #ffffff;
        }

        &.item-rollemaa {
            background: #A9BA8F;

            .overlay-link {
                background: #547424;
            }
        }

        &.item-twitter {
            background: #55acee;
        }

        &.item-medium {
            background: #333332;

            .overlay-link {
                background: #151515;
            }
        }

        &.item-code {
            background: #999999;

            .overlay-link {
                background: #6cc644;
            }

        }

        &.item-company {
            background: #E95F4F;
        }

        &.item-beer {
            background: darken(#FECB2E,5%);

            img {
                width: 19px;
                height: auto;
                margin-right: 6px;
                position: relative;
                left: -2px;
                top: -2px;
            }
        }

        &.item-photos {
            background: #3f729b;

            img {
                width: 17px;
                height: auto;
                margin-right: 6px;
                top: -1px;
                position: relative;
            }
        }

    }

}

.footer-container {

    margin-top: 40px;

    p {
        @include type-scale('normal');
        opacity: 0.6;
        text-align: center;

        span {
            position: relative;
            top: 7px;
            margin-left: 2px;
            margin-right: 2px;
        }

        a {
            font-weight: bolder;
        }
    }
}

